# otus-cpp-bacics-hw-1

./: .gitignore  CMakeLists.txt  README.md  guessTheNumber.cpp  guessTheNumber.h  main.cpp  main.h
gtests/: CMakeLists.txt  containerList_tests.cpp  containerSerial_tests.cpp  containers_tests.cpp
homework/: hello_world.cpp  move_me_out.cpp  move_me_out.h
include/: add.hpp  astnode.hpp  containerList.hpp  containerSerial.hpp  div.hpp  istatistics.hpp  max.hpp  mean.hpp  min.hpp  mul.hpp  number.hpp  std.hpp  sub.hpp  variable.hpp
src/: astnode.cpp  containerList.inl  containerSerial.inl  main.cpp  parser.cpp
